--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,10 @@ h6{
     margin-top: 20px;
 }
 .Infofutbol{
-    text-align: center;
-    gap: 20px;  
+    text-align: center; 
 }
+  .btn.succes {
+    font-size: 20px;  
+    padding: 15px 30px; 
+    text-align: center; 
+  }
